--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
+    "tailwind-react-native-classnames": "^3.0.1",
     "twrnc": "^4.6.0"
   },
   "devDependencies": {
