enhance profile screen with user details, image upload, and lifestyle tags functionality

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
     "tailwind-react-native-classnames": "^3.0.1",
-    "twrnc": "^4.6.0"
+    "twrnc": "^4.6.0",
+    "expo-image-picker": "~16.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
