--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-webview": "13.12.2",
     "tailwind-react-native-classnames": "^3.0.1",
     "tailwindcss": "^3.4.17",
-    "twrnc": "^4.6.0"
+    "twrnc": "^4.6.0",
+    "react-native-maps": "1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
