--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "tailwind-react-native-classnames": "^3.0.1",
     "tailwindcss": "^3.4.17",
     "twrnc": "^4.6.0",
-    "react-native-maps": "1.18.0"
+    "react-native-maps": "1.18.0",
+    "expo-location": "~18.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
