--- a/app.json
+++ b/app.json
@@ -23,6 +23,12 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(ROOMEE) to use your location."
+        }
+      ],
       "expo-router",
       [
         "expo-splash-screen",
