--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "tailwindcss": "^3.4.17",
     "twrnc": "^4.6.0",
     "react-native-maps": "1.18.0",
-    "expo-location": "~18.0.5"
+    "expo-location": "~18.0.5",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
