--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.4",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -27,31 +31,33 @@
     "expo-haptics": "~14.0.0",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.5",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.4.49",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-jwt-decode": "^1.0.3",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "tailwind-react-native-classnames": "^3.0.1",
     "tailwindcss": "^3.4.17",
-    "twrnc": "^4.6.0",
-    "react-native-maps": "1.18.0",
-    "expo-location": "~18.0.5",
-    "@react-native-community/netinfo": "11.4.1",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "twrnc": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
